@@ -1,4 +1,4 @@
-@set UPDATED 2 July 2022
-@set UPDATED-MONTH July 2022
+@set UPDATED 6 May 2023
+@set UPDATED-MONTH May 2023
 @set EDITION 1.2.4
 @set VERSION 1.2.4
