@@ -1,3 +1,3 @@
 #!/bin/bash
 EMACS=${EMACS:-emacs}
-${EMACS} -batch -L ${srcdir}/.. -L ${srcdir} -l ${srcdir}/test-explanations.el --eval '(let ((ert-batch-print-length 120) (ert-batch-print-level 25) (ert-batch-backtrace-right-margin 120)) (ert-run-tests-batch-and-exit))'
+${EMACS} -batch -L ${srcdir}/.. -L ${srcdir} -l ${srcdir}/test-explanations.el --eval '(let ((ert-batch-print-length 120) (ert-batch-print-level 25) (ert-batch-backtrace-right-margin 120)) (ert-run-tests-batch-and-exit "^explanations.*"))'
