@@ -1,3 +1,15 @@
+2023-05-06  Michael Herstine  <sp1ff@pobox.com>
+
+	    - Updated the elfeed-score manual to reflect this     - Fixed a unit test that was broken by the previous merge     - Added swflint to AUTHORS
+
+2023-05-02  Samuel W. Flint  <swflint@flintfam.org>
+
+	Add configurability to elfeed-score-scoring-score-entry depth
+
+2023-03-09  Samuel W. Flint  <swflint@flintfam.org>
+
+	Use with-help-window to make the explanation buffer easily quittable
+
 2022-07-02  Michael Herstine  <sp1ff@pobox.com>
 
 	Merge branch 'master' of github.com:sp1ff/elfeed-score
